# AzureSDKForRust

./: README.md
azure_sdk_auth_aad/: Cargo.toml
azure_sdk_auth_aad/examples/: interactive.rs  non_interactive.rs
azure_sdk_auth_aad/src/: client_helpers.rs  errors.rs  lib.rs  login_response.rs  main.rs
src/azure/storage/: client.rs  rest_client.rs
src/azure/storage/blob/: mod.rs
